--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <i class="material-icons">play_arrow</i>
         </button>
         <button class="mdl-button mdl-js-button mdl-button--icon ui-stepButton mdl-button--raised mdl-js-ripple-effect" id="next-step-button" title="Run 200 iterations">
-            <i class="material-icons">skip_next</i>
+            <i class="material-icons">fast_forward</i>
         </button>
         <button id="distribution" class="mdl-button mdl-js-button mdl-button--icon mdl-button--raised mdl-js-ripple-effect" title="Build distribution graph">
             <i class="material-icons">motorcycle</i>
